# GlRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg-configuration.json  vcpkg.json
GlRenderer/: CMakeLists.txt  main.cpp
GlRenderer/engine/: CubeMap.cpp  CubeMap.h  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  Gui.cpp  Gui.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformObject.cpp  UniformObject.h  VertexObject.cpp  VertexObject.h  Window.cpp  Window.h
GlRenderer/engine/gui/: SceneHierarchy.cpp  SceneHierarchy.h  SceneViewport.cpp  SceneViewport.h
GlRenderer/engine/util/: Ref.h
resources/: fragment.frag  skybox.frag  skybox.vert  vertex.vert
